--- a/package.json
+++ b/package.json
@@ -26,20 +26,21 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.25",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/coverage-v8": "^3.1.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/tsconfig": "^0.5.1",
     "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.0.3",
     "typescript": "~5.4.0",
-    "vite": "^5.1.5",
+    "vite": "^6.3.5",
     "vite-plugin-vue-devtools": "^7.0.16",
-    "vue-tsc": "^2.0.6",
-    "vitest": "^1.0.0",
+    "vitest": "^3.1.4",
     "vue": "^3.4.0",
-    "jsdom": "^24.0.0"
+    "vue-tsc": "^2.0.6"
   }
 }
